<resources>
    <string name="app_name">WhatsappDesign</string>
    <string name="nav_header_desc">User profile pic</string>
    <string name="nav_header_title">Daniel</string>
    <string name="nav_header_subtitle">The Pro</string>
    <string name="floating_plus_description">Add a contact</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="settings_title">Settings</string>
    <string name="back">Back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="display_name">Display Name</string>
    <string name="select_profile_picture">Select Profile Picture</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="username_already_taken_or_error">Username already taken or error</string>
    <string name="error_with_request_to_server">Error with request to server</string>
    <string name="already_registered">Already Registered</string>
    <string name="invalid_username_or_password">Invalid username or password</string>
    <string name="request_to_server_failed">Request to server failed</string>
    <string name="enter_username_to_add">Enter username to add</string>
    <string name="add">Add</string>
    <string name="enter_message">Enter message...</string>
    <string name="send">Send</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="change_server_base_url">Change server base URL:</string>
    <string name="enter_server_base_url">Enter server base URL</string>
    <string name="apply">Apply</string>
    <string name="changing_base_url_not_permitted">Changing the server base URL is only permitted from the signup page</string>
    <string name="settings_button">Settings Button</string>
    <string name="msg_token_fmt">token: %1$s</string>
    <string name="channel_name">firebaseChannel</string>
    <string name="channel_description">firebase_notifcations_channel</string>
</resources>